#21: Enable Java 15 and preview features.